--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
   />
-  <title>Private Chat Client</title>
+  <title>Private Local Chat</title>
   <style>
     /* Minimal styling for the chat client UI. */
 
